--- a/views/adminpanel/partials/header.ejs
+++ b/views/adminpanel/partials/header.ejs
@@ -52,7 +52,7 @@
 
       <li class="nav-item">
         <a class="nav-link" href="/admin/users">
-          <i class="fa fa-users" ></i>
+          <i class="fa fa-user" aria-hidden="true"></i>
           <span>Users</span></a>
       </li>
       <!-- Nav Item - Charts -->
@@ -70,6 +70,11 @@
         <a class="nav-link" href="admin/program">
           <i class="fas fa-tasks"></i>
           <span>Program</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="admin/team">
+          <i class="fa fa-users" ></i>
+          <span>Team</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="admin/fileupload">
