added gallery image upload and diff tabs for file upload

--- a/views/adminpanel/viewusers/approve.ejs
+++ b/views/adminpanel/viewusers/approve.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header") %>
 
-<a href="/viewusers">Back</a>
+<a href="/admin/users">Back</a>
 <% for(let i of approve){ %>
     <div class="col-lg-4 col-md-6 mb-3">
       <div class="card mx-auto" style="width: 20rem;">
