--- a/views/adminpanel/partials/header.ejs
+++ b/views/adminpanel/partials/header.ejs
@@ -19,7 +19,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+  <style>
+    .progress-bar{
+      height: 35px;
+      width:250px;
+      border: 2px solid darkblue;
+    }
+    .progress-bar-fill{
+      height:100%;
+      width:0%;
+      background: lightblue;
+      display: flex;
+      align-items:center;
+      transition:width 0.25s;
+    }
+    .progress-bar-text{
+      margin-left:10px;
+      font-weight:bold;
+    }
+  </style>
 </head>
 
 <body id="admin-top">
@@ -75,6 +93,11 @@
         <a class="nav-link" href="admin/team">
           <i class="fa fa-users" ></i>
           <span>Team</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="admin/gallery">
+          <i class="fas fa-image"></i>
+          <span>Gallery Image Upload</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="admin/fileupload">
