--- a/views/adminpanel/news-and-events/edit.ejs
+++ b/views/adminpanel/news-and-events/edit.ejs
@@ -6,7 +6,7 @@
         <form action="/admin/news-and-events/<%=news._id%>?_method=PATCH" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" name="title" id="title" placeholder="Product Name" value="<%= news.title %> ">
+                <input type="text" class="form-control" name="name" id="name" placeholder="Product Name" value="<%= news.name %> ">
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Image Upload (the image size should be 400px x 400px)</label>
