added better description styling

--- a/views/adminpanel/equipment/edit.ejs
+++ b/views/adminpanel/equipment/edit.ejs
@@ -17,7 +17,7 @@
 
       <div class="mb-3">
         <label for="desc" class="form-label">Description</label>
-        <textarea class="form-control" name="description" id="description" rows="5"><%=equipment.description%></textarea>
+        <textarea class="form-control" name="description" id="mytextarea" rows="5"><%=equipment.description%></textarea>
       </div>
 
       <select class="form-select" aria-label="Default select example" id="type" name="type">
