--- a/views/adminpanel/equipment/new.ejs
+++ b/views/adminpanel/equipment/new.ejs
@@ -17,7 +17,7 @@
           </div>
           <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea class="form-control" name="description" id="description" rows="5"></textarea>
+            <textarea class="form-control" name="description" id="mytextarea" rows="5"></textarea>
           </div>
 
           <select class="form-select" aria-label="Default select example" id="type" name="type">
