--- a/views/adminpanel/news-and-events/edit.ejs
+++ b/views/adminpanel/news-and-events/edit.ejs
@@ -15,7 +15,7 @@
               </div>
             <div class="mb-3">
                 <label for="desc" class="form-label">Description</label>
-                <textarea class="form-control" name="description" id="description"rows="5"><%= news.description %> </textarea>
+                <textarea class="form-control" name="description"  id="mytextarea" rows="5"><%= news.description %> </textarea>
             </div>
             <button type="submit" class="btn btn-success btn-small">Submit</button>
         </form>
