--- a/views/adminpanel/program/new.ejs
+++ b/views/adminpanel/program/new.ejs
@@ -25,7 +25,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="desc" class="form-label">Description</label>
-                    <textarea class="form-control" name="description" id="description"rows="5"></textarea>
+                    <textarea class="form-control" name="description"  id="mytextarea" rows="5"></textarea>
                 </div>
                 <button type="submit" class="btn btn-success btn-small">Submit</button>
             </form>
