--- a/views/adminpanel/equipment/edit.ejs
+++ b/views/adminpanel/equipment/edit.ejs
@@ -6,8 +6,7 @@
     <form action="/admin/equipment/<%=equipment._id%>?_method=PATCH" method="POST" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" name="equipmentName" id="equipmentName"
-          placeholder="Equipment Name" value="<%=equipment.equipmentName%>">
+        <input type="text" class="form-control" name="equipmentName" id="equipmentName" placeholder="Equipment Name" value="<%=equipment.equipmentName%>">
       </div>
       <div class="mb-3">
         <label for="image" class="form-label">Image Upload (the image size should be 400px x 400px)</label>
@@ -22,59 +21,135 @@
 
       <select class="form-select" aria-label="Default select example" id="type" name="type">
         <%if(equipment.type=="Carpentry"){%>
-          <option value="Carpentry" selected>Carpentry</option>
-          <%}else{%>
-            <option value="Carpentry">Carpentry</option>
-          <%}%>
+        <option value="Carpentry" selected>Carpentry</option>
+        <%}else{%>
+        <option value="Carpentry">Carpentry</option>
+        <%}%>
         
         <%if(equipment.type=="Electronic"){%>
-          <option value="Electronic" selected>Electronic</option>
-          <%}else{%>
-            <option value="Electronic">Electronic</option>
-          <%}%>
+        <option value="Electronic" selected>Electronic</option>
+        <%}else{%>
+        <option value="Electronic">Electronic</option>
+        <%}%>
           <%if(equipment.type=="Heavy"){%>
-            <option value="Heavy" selected>Heavy</option>
-            <%}else{%>
-              <option value="Heavy">Heavy</option>
-            <%}%>
+        <option value="Heavy" selected>Heavy</option>
+        <%}else{%>
+        <option value="Heavy">Heavy</option>
+        <%}%>
             <%if(equipment.type=="Metal"){%>
-              <option value="Metal" selected>Metal</option>
-              <%}else{%>
-                <option value="Metal">Metal Works</option>
-              <%}%>
+        <option value="Metal" selected>Metal</option>
+        <%}else{%>
+        <option value="Metal">Metal Works</option>
+        <%}%>
       </select>
       <br><br>
 
       <label for="booking" class="form-label">Can Be Booked By</label>-<br>
-      
-      <input type="checkbox" id="student" name="student" value="true">
-      <label for="student"> Student</label><br>
-      <input type="checkbox" id="startup" name="startup" value="true">
-      <label for="startup"> Startup</label><br>
-      <input type="checkbox" id="communtiy" name="communtiy" value="true">
-      <label for="communtiy"> Communtiy</label><br>
-      <input type="checkbox" id="company" name="company" value="true">
-      <label for="company"> Company</label></br>
+      <label for="student" class="form-label"><b>Student</b></label>
+      <div class="form-check">
+        <%if (equipment.student==true){%>
+        <input class="form-check-input" type="radio" name="student" id="student" value="true" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="student" id="student" value="true">
+        <%}%>
+        <label class="form-check-label" for="student">
+          Yes
+        </label>
+      </div>
+      <div class="form-check">
+        <%if (equipment.student==false){%>
+        <input class="form-check-input" type="radio" name="student" id="student" value="false" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="student" id="student" value="false">
+        <%}%>
+        <label class="form-check-label" for="student">
+          No
+        </label>
+      </div>
+      <label for="startup" class="form-label"><b>Startup</b></label>
+      <div class="form-check">
+        <%if (equipment.startup==true){%>
+        <input class="form-check-input" type="radio" name="startup" id="startup" value="true" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="startup" id="startup" value="true">
+        <%}%>
+        <label class="form-check-label" for="startup">
+          Yes
+        </label>
+      </div>
+      <div class="form-check">
+        <%if (equipment.startup==false){%>
+        <input class="form-check-input" type="radio" name="startup" id="startup" value="false" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="startup" id="startup" value="false">
+        <%}%>
+        <label class="form-check-label" for="startup">
+          No
+        </label>
+      </div>
+      <label for="communtiy" class="form-label"><b>Communtiy</b></label>
+      <div class="form-check">
+        <%if (equipment.communtiy==true){%>
+        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="true" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="true">
+        <%}%>
+        <label class="form-check-label" for="communtiy">
+          Yes
+        </label>
+      </div>
+      <div class="form-check">
+        <%if (equipment.communtiy==false){%>
+        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="false" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="false">
+        <%}%>
+        <label class="form-check-label" for="communtiy">
+          No
+        </label>
+      </div>
+      <label for="company" class="form-label"><b>Company</b></label>
+      <div class="form-check">
+        <%if (equipment.company==true){%>
+        <input class="form-check-input" type="radio" name="company" id="company" value="true" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="company" id="company" value="true">
+        <%}%>
+        <label class="form-check-label" for="company">
+          Yes
+        </label>
+      </div>
+      <div class="form-check">
+        <%if (equipment.company==false){%>
+        <input class="form-check-input" type="radio" name="company" id="company" value="false" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="company" id="company" value="false">
+        <%}%>
+        <label class="form-check-label" for="company">
+          No
+        </label>
+      </div>
+ 
 
 
       <label for="isAvailable"> isAvailable</label>
   
           <div class="form-check">
             <%if (equipment.isAvailable==true){%>
-            <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="true" checked="checked">
-            <%}else{%>
-              <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="true">
-              <%}%>
+        <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="true" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="true">
+        <%}%>
             <label class="form-check-label" for="isAvailable">
               Yes
             </label>
           </div>
           <div class="form-check">
             <%if (equipment.isAvailable==false){%>
-          <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="false" checked="checked">
-          <%}else{%>
-            <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="false">
-            <%}%>
+        <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="false" checked="checked">
+        <%}else{%>
+        <input class="form-check-input" type="radio" name="isAvailable" id="isAvailable" value="false">
+        <%}%>
             <label class="form-check-label" for="isAvailable">
               No
             </label>
