--- a/views/adminpanel/booking/viewbooking.ejs
+++ b/views/adminpanel/booking/viewbooking.ejs
@@ -1,115 +1,131 @@
 <%- include('../partials/header.ejs') %>
-<div>
-  <h1>Bookings
-</div>
 
-<div >
-  <table class="table table-sm table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">09:00-10:00</th>
-        <th scope="col">10:00-11:00</th>
-        <th scope="col">11:00-12:00</th>
-        <th scope="col">12:00-01:00</th>
-        <th scope="col">01:00-02:00</th>
-        <th scope="col">02:00-03:00</th>
-        <th scope="col">03:00-04:00</th>
-        <th scope="col">04:00-05:00</th>
-      </tr>
-    </thead>
-    <tbody>
+  <div class="container-fluid">
+    <div class="container">
+      <h1><b>Equipment Bookings</b></h1>
+      <h3>Select the date to check bookings for</h3>
+      <form>
+        <input type="date" id="datepicker">
+        &nbsp
+        <input type="submit" value="Check" style="font-size: 1rem">
+      </form>
+      </br>
 
-      <% for(let i in booking){ %>
-      <tr>
-        <td scope="row">
-          <%if( booking[i].time=="09:00-10:00"){ %>
-          <%=booking[i].EquipmentName%><br>
-          <%=booking[i].EquipmentType%><br>
-          <%=booking[i].UserName%><br>
-          <%=booking[i].UserEmail%><br>
-          <%=booking[i].UserPhone%><br>
-          <%=booking[i].date%><br>
-          <%=booking[i].createdAt%><br>
-          <% }%>
-
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="10:00-11:00"){ %>
-                <%=booking[i].id%><br>
-                <%=booking[i].date%><br>
-                <%=booking[i].user%>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="11:00-12:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-          <%=booking[i].EquipmentType%><br>
-          <%=booking[i].UserName%><br>
-          <%=booking[i].UserEmail%><br>
-          <%=booking[i].UserPhone%><br>
-          <%=booking[i].date%><br>
-          <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="12:00-01:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-              <%=booking[i].EquipmentType%><br>
-              <%=booking[i].UserName%><br>
-              <%=booking[i].UserEmail%><br>
-              <%=booking[i].UserPhone%><br>
-              <%=booking[i].date%><br>
-              <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="01:00-02:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-              <%=booking[i].EquipmentType%><br>
-              <%=booking[i].UserName%><br>
-              <%=booking[i].UserEmail%><br>
-              <%=booking[i].UserPhone%><br>
-              <%=booking[i].date%><br>
-              <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="02:00-03:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-              <%=booking[i].EquipmentType%><br>
-              <%=booking[i].UserName%><br>
-              <%=booking[i].UserEmail%><br>
-              <%=booking[i].UserPhone%><br>
-              <%=booking[i].date%><br>
-              <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="03:00-04:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-              <%=booking[i].EquipmentType%><br>
-              <%=booking[i].UserName%><br>
-              <%=booking[i].UserEmail%><br>
-              <%=booking[i].UserPhone%><br>
-              <%=booking[i].date%><br>
-              <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-        <td scope="row">
-            <%if( booking[i].time=="04:00-05:00"){ %>
-              <%=booking[i].EquipmentName%><br>
-              <%=booking[i].EquipmentType%><br>
-              <%=booking[i].UserName%><br>
-              <%=booking[i].UserEmail%><br>
-              <%=booking[i].UserPhone%><br>
-              <%=booking[i].date%><br>
-              <%=booking[i].createdAt%><br>
-                <% }%>
-        </td>
-      </tr>
-
-      <%}%>
-   
+      <span class="show-search">
+        Search <input id="search-input" type="text">
+        </p>
+      </span>
+    </div>
+    <table class="table table-sm table-bordered">
+      <span class="show-table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col" data-column="Name" data-order="desc">Equipment Name &#9650</th>
+            <th scope="col" data-column="Type" data-order="desc">Type &#9650</th>
+            <th scope="col" data-column="Details" data-order="desc">User Details &#9650</th>
+            <th scope="col" data-column="Time" data-order="desc">Time &#9650</th>
+          </tr>
+        </thead>
+      </span>
+      <tbody id="myTable">
+        <tr>
+          <td colspan="4" style='text-align:center; vertical-align:middle'><h1><b>Select Date</b></h1></td>
+        </tr>
       </tbody>
     </table>
-    </div>
+
+  </div>
+  </p>
+  <script>
+    var dataArray = [];
+    
+    $('#search-input').on('keyup', function () {
+      var value = $(this).val()
+      var data = searchTable(value, dataArray)
+      buildTable(data)
+    })
+
+    $('th').on('click', function () {
+      var column = $(this).data('column')
+      var order = $(this).data('order')
+      var text = $(this).html()
+      text = text.substring(0, text.length - 1)
+
+      if (order == 'desc') {
+        $(this).data('order', "asc")
+        dataArray = dataArray.sort((a, b) => a[column] > b[column] ? 1 : -1)
+        text += '&#9660'
+
+      } else {
+        $(this).data('order', "desc")
+        dataArray = dataArray.sort((a, b) => a[column] < b[column] ? 1 : -1)
+        text += '&#9650'
+
+      }
+      $(this).html(text)
+      buildTable(dataArray)
+    })
+
+    const form = document.querySelector('form');
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault()
+      date = document.querySelector('#datepicker').value;
+      if (date) {
+        try {
+          const res = await fetch('/admin/booking', {
+            method: 'POST',
+            body: JSON.stringify({ date }),
+            headers: { 'Content-Type': 'application/json' }
+          })
+          dataArray = await res.json();
+
+          buildTable(dataArray)
+        } catch (err) {
+          console.log(err.message)
+        }
+      } else {
+        alert('Input type date is empty');
+      }
+    })
+
+
+    function buildTable(data) {
+      var table = document.getElementById('myTable')
+      table.innerHTML = ''
+      if (!data.length) {
+        var row = `<tr >
+							    <td colspan="4" style='text-align:center; vertical-align:middle'>No Matches Found</td>
+                  </tr>`
+        table.innerHTML += row
+      }
+      for (var i = 0; i < data.length; i++) {
+        var row =
+          `<tr>
+							<td>${data[i].EquipmentName}</td>
+							<td>${data[i].EquipmentType}</td>
+							<td>
+                  ${data[i].UserName}</br>
+                  ${data[i].UserEmail}</br>
+                  ${data[i].UserOrganization}</br>
+                  ${data[i].UserPhone}</br>
+              </td>
+              <td>${data[i].time}</td>
+					  </tr>`
+        table.innerHTML += row
+      }
+    }
+
+    function searchTable(value, data) {
+      var filterdata = []
+      for (var i = 0; i < data.length; i++) {
+        value = value.toLowerCase()
+        var name = data[i].EquipmentName.toLowerCase() + data[i].EquipmentType.toLowerCase() + data[i].UserName.toLowerCase() + data[i].UserOrganization.toLowerCase() + data[i].time.toLowerCase()
+        if (name.includes(value)) {
+          filterdata.push(data[i])
+        }
+      }
+      return filterdata
+    }
+  </script>
+
+  </div>
