--- a/views/adminpanel/partials/header.ejs
+++ b/views/adminpanel/partials/header.ejs
@@ -107,6 +107,12 @@
 
           <span>Bookings</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="viewBookingInduction">
+          <i class="fas fa-fw fa-table"></i>
+
+          <span>Induction Bookings</span></a>
+      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
