--- a/views/adminpanel/booking/viewbooking.ejs
+++ b/views/adminpanel/booking/viewbooking.ejs
@@ -20,7 +20,7 @@
       <span class="show-table">
         <thead class="thead-dark">
           <tr>
-            <th scope="col" data-column="Name" data-order="desc">Equipment Name &#9650</th>
+            <th scope="col" data-column="Name" data-order="desc">Equipment Name & Booking ID&#9650</th>
             <th scope="col" data-column="Type" data-order="desc">Type &#9650</th>
             <th scope="col" data-column="Details" data-order="desc">User Details &#9650</th>
             <th scope="col" data-column="Time" data-order="desc">Time &#9650</th>
@@ -78,7 +78,7 @@
             headers: { 'Content-Type': 'application/json' }
           })
           dataArray = await res.json();
-
+          console.log(dataArray)
           buildTable(dataArray)
         } catch (err) {
           console.log(err.message)
@@ -101,7 +101,7 @@
       for (var i = 0; i < data.length; i++) {
         var row =
           `<tr>
-							<td>${data[i].EquipmentName}</td>
+							<td>${data[i].EquipmentName}</br>Booking ID: ${data[i]._id}</td>
 							<td>${data[i].EquipmentType}</td>
 							<td>
                   ${data[i].UserName}</br>
@@ -119,7 +119,7 @@
       var filterdata = []
       for (var i = 0; i < data.length; i++) {
         value = value.toLowerCase()
-        var name = data[i].EquipmentName.toLowerCase() + data[i].EquipmentType.toLowerCase() + data[i].UserName.toLowerCase() + data[i].UserOrganization.toLowerCase() + data[i].time.toLowerCase()
+        var name = data[i]._id.toLowerCase()+data[i].EquipmentName.toLowerCase() + data[i].EquipmentType.toLowerCase() + data[i].UserName.toLowerCase() + data[i].UserOrganization.toLowerCase() + data[i].time.toLowerCase()
         if (name.includes(value)) {
           filterdata.push(data[i])
         }
