--- a/views/adminpanel/equipment/edit.ejs
+++ b/views/adminpanel/equipment/edit.ejs
@@ -90,9 +90,9 @@
       <label for="communtiy" class="form-label"><b>Communtiy</b></label>
       <div class="form-check">
         <%if (equipment.communtiy==true){%>
-        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="true" checked="checked">
+        <input class="form-check-input" type="radio" name="community" id="communtiy" value="true" checked="checked">
         <%}else{%>
-        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="true">
+        <input class="form-check-input" type="radio" name="community" id="communtiy" value="true">
         <%}%>
         <label class="form-check-label" for="communtiy">
           Yes
@@ -100,9 +100,9 @@
       </div>
       <div class="form-check">
         <%if (equipment.communtiy==false){%>
-        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="false" checked="checked">
+        <input class="form-check-input" type="radio" name="community" id="communtiy" value="false" checked="checked">
         <%}else{%>
-        <input class="form-check-input" type="radio" name="communtiy" id="communtiy" value="false">
+        <input class="form-check-input" type="radio" name="community" id="communtiy" value="false">
         <%}%>
         <label class="form-check-label" for="communtiy">
           No
