Changed From Metal To Laser

--- a/views/adminpanel/equipment/edit.ejs
+++ b/views/adminpanel/equipment/edit.ejs
@@ -36,10 +36,10 @@
         <%}else{%>
         <option value="Heavy">Heavy</option>
         <%}%>
-            <%if(equipment.type=="Metal"){%>
-        <option value="Metal" selected>Metal</option>
+            <%if(equipment.type=="Laser"){%>
+        <option value="Laser" selected>Laser</option>
         <%}else{%>
-        <option value="Metal">Metal Works</option>
+        <option value="Laser">Laser</option>
         <%}%>
       </select>
       <br><br>
