--- a/views/adminpanel/equipment/new.ejs
+++ b/views/adminpanel/equipment/new.ejs
@@ -25,7 +25,7 @@
             <option value="Carpentry">Carpentry</option>
             <option value="Electronic">Electronic</option>
             <option value="Heavy">Heavy</option>
-            <option value="Metal">Metal Works</option>
+            <option value="Laser">Laser</option>
           </select>
           <br><br>
 
