--- a/views/adminpanel/equipment/show.ejs
+++ b/views/adminpanel/equipment/show.ejs
@@ -30,7 +30,7 @@
           <span name="options" id="option4" value="Heavy" aria-pressed="true" onclick="filter('Heavy')"> Heavy
         </label>
         <label class="btn btn-secondary" id="option5">
-          <span name="options" id="option5" value="Metal" aria-pressed="true" onclick="filter('Metal')"> Laser
+          <span name="options" id="option5" value="Laser" aria-pressed="true" onclick="filter('Laser')"> Laser
         </label>
 
       </div>
