--- a/views/adminpanel/equipment/edit.ejs
+++ b/views/adminpanel/equipment/edit.ejs
@@ -87,24 +87,24 @@
           No
         </label>
       </div>
-      <label for="communtiy" class="form-label"><b>Communtiy</b></label>
+      <label for="community" class="form-label"><b>Community</b></label>
       <div class="form-check">
-        <%if (equipment.communtiy==true){%>
+        <%if (equipment.community==true){%>
         <input class="form-check-input" type="radio" name="community" id="community" value="true" checked="checked">
         <%}else{%>
         <input class="form-check-input" type="radio" name="community" id="community" value="true">
         <%}%>
-        <label class="form-check-label" for="communtiy">
+        <label class="form-check-label" for="community">
           Yes
         </label>
       </div>
       <div class="form-check">
-        <%if (equipment.communtiy==false){%>
+        <%if (equipment.community==false){%>
         <input class="form-check-input" type="radio" name="community" id="community" value="false" checked="checked">
         <%}else{%>
         <input class="form-check-input" type="radio" name="community" id="community" value="false">
         <%}%>
-        <label class="form-check-label" for="communtiy">
+        <label class="form-check-label" for="community">
           No
         </label>
       </div>
